# product-scraper-system

./: .gitignore  debug_page_received.html  main.py  prepare.py  pyproject.toml  requirements.txt
src/api/: app.py
src/config/: __init__.py  config.py
src/core/: browser_scraper.py  database_manager.py  llm_manager.py  orchestrator.py  requests_scraper.py  scraper.py  selector_manager.py
src/product_scraper_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_database_manager.py  test_selector_manager.py
ui/: app.config.ts  nuxt.config.ts  package-lock.json  package.json
ui/app/assets/css/: main.css
ui/app/components/: DisplayProduct.vue  GetProductWithId.vue  GetProductWithUrl.vue  ProductForms.vue  UrlForm.vue
ui/app/composables/: useExtractor.ts
ui/app/pages/: index.vue
ui/server/api/: get-product.ts  scrape-product.ts
