[project]
name = "product-scraper-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.29.0",
    "hrequests[all]>=0.9.2",
    "python-dotenv>=1.1.1",
    "selectolax>=0.3.32",
    "supabase>=2.18.0",
]
